[package]
name = "rchange"
version = "0.1.0"
edition = "2021"

[lib]
name = "rchange"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
hmac = "0.12.1"
sha2 = "0.10.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
error-chain = { version = "0.12.4", default-features = false }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
clap = "4.5.2"
chrono = { version = "0.4.38", features = ["serde"] }

[features]
vendored-tls = [
  "reqwest/native-tls-vendored",
  "tungstenite/native-tls-vendored",
]

[dev-dependencies]
csv = "1.3.0"
mockito = "1.4.0"
env_logger = "0.11.2"
criterion = "0.5"
float-cmp = "0.9.0"
serde_json = "1.0"
